--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,23 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="iziToast.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <div class="cont-bar">
+      <load src="partials/header.html" />
 
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+      <section>
+        <h1>Welcome to timer and snackbar!</h1>
+        <!-- Path to images as from index.html file -->
+        <img src="./img/javascript.svg" alt="" />
+      </section>
+    </div>
+    <script src="iziToast.min.js" type="text/javascript"></script>
   </body>
 </html>
